Correction manque de visibilité du texts du bloc contact en bas de page

--- a/style.css
+++ b/style.css
@@ -857,8 +857,8 @@ h4 {
 }
 
 .icon-dark-slate-blue {
-    color: #364577!important;
-    border-color: #364577!important;
+    color: #af4b50!important;
+    border-color: #af4b50!important;
 }
 
 blockquote {
